#####                           CHANGELOG                                  #####
#####                                                                      #####
################################################################################


0.5.* UPDATES
--------------------------------------------------------------------------------
4: Moved graphs into subparagraphs for better report readability
3: tRNA quantification, clustering and PCA were added to the final report
2: Colours in the report are adjusted to new colouring scheme
1: tRNA reads are now sorted, indexed and the idxstats are calculated (effectively tRNAs are quantified now)

Previous updates
--------------------------------------------------------------------------------

* 0.4: Release version
* 0.3.29: Added the novel mirna visualisation and quantification as well as hclust and PCA parts for it
REVERSED!!! * 0.3.28: pipeline and server config files are now extracted from system call
* 0.3.27: Lexogen added to the presetting for adapter trimming
* 0.3.26: Exception handlers added to the workflow report and some bugfix for the absence of sampleInfo.txt file
* 0.3.25: Complete rewritten donvo miRNA identification based on bedtools and coverage
* 0.3.24: Novel miRNAs are now predicted via Stringtie from the STAR alignments
* 0.3.23: Restructured pipeline report
* 0.3.22: Improved colours for PCA plots and bugfix. It could happen that colours were not assigned correctly
* 0.3.21: Bugfix in workflowReport.Rmd: Overall statistics were not assembling the counts correctly
* 0.3.20: Bugfix unconsidered reads in STAR barplot
* 0.3.19: Quantification tables for mirbase fasta added to final report
* 0.3.18: FinalReport.Rmd updated and overall statistics added
* 0.3.17: datatable output for the top expressed biotypes in the final report.
* 0.3.16: Writing out top expressed genes per biotype
* 0.3.15: Better biotype visualisation
* 0.3.14: Added seqkit quantifications to FinalReport.Rmd