@@ -7,6 +7,7 @@
 
 0.5.* UPDATES
 --------------------------------------------------------------------------------
+5: Changed input to a single samplesheet format allowing flexible file names
 4: Moved graphs into subparagraphs for better report readability
 3: tRNA quantification, clustering and PCA were added to the final report
 2: Colours in the report are adjusted to new colouring scheme
